--- a/bookinfo.yaml
+++ b/bookinfo.yaml
@@ -131,6 +131,8 @@ spec:
   replicas: 1
   template:
     metadata:
+      annotations:
+        sidecar.istio.io/inject: "true"
       labels:
         app: reviews
         version: v2
