--- a/bookinfo.yaml
+++ b/bookinfo.yaml
@@ -21,6 +21,7 @@ metadata:
   name: details
   labels:
     app: details
+    service: details
 spec:
   ports:
   - port: 9080
@@ -32,6 +33,9 @@ apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
   name: details-v1
+  labels:
+    app: details
+    version: v1
 spec:
   replicas: 1
   template:
@@ -44,7 +48,7 @@ spec:
     spec:
       containers:
       - name: details
-        image: istio/examples-bookinfo-details-v1:1.8.0
+        image: istio/examples-bookinfo-details-v1:1.10.1
         imagePullPolicy: IfNotPresent
         ports:
         - containerPort: 9080
@@ -58,6 +62,7 @@ metadata:
   name: ratings
   labels:
     app: ratings
+    service: ratings
 spec:
   ports:
   - port: 9080
@@ -69,6 +74,9 @@ apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
   name: ratings-v1
+  labels:
+    app: ratings
+    version: v1
 spec:
   replicas: 1
   template:
@@ -81,7 +89,7 @@ spec:
     spec:
       containers:
       - name: ratings
-        image: istio/examples-bookinfo-ratings-v1:1.8.0
+        image: istio/examples-bookinfo-ratings-v1:1.10.1
         imagePullPolicy: IfNotPresent
         ports:
         - containerPort: 9080
@@ -95,6 +103,7 @@ metadata:
   name: reviews
   labels:
     app: reviews
+    service: reviews
 spec:
   ports:
   - port: 9080
@@ -106,6 +115,9 @@ apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
   name: reviews-v1
+  labels:
+    app: reviews
+    version: v1
 spec:
   replicas: 1
   template:
@@ -118,7 +130,7 @@ spec:
     spec:
       containers:
       - name: reviews
-        image: istio/examples-bookinfo-reviews-v1:1.8.0
+        image: istio/examples-bookinfo-reviews-v1:1.10.1
         imagePullPolicy: IfNotPresent
         ports:
         - containerPort: 9080
@@ -127,6 +139,9 @@ apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
   name: reviews-v2
+  labels:
+    app: reviews
+    version: v2
 spec:
   replicas: 1
   template:
@@ -139,7 +154,7 @@ spec:
     spec:
       containers:
       - name: reviews
-        image: istio/examples-bookinfo-reviews-v2:1.8.0
+        image: istio/examples-bookinfo-reviews-v2:1.10.1
         imagePullPolicy: IfNotPresent
         ports:
         - containerPort: 9080
@@ -148,6 +163,9 @@ apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
   name: reviews-v3
+  labels:
+    app: reviews
+    version: v3
 spec:
   replicas: 1
   template:
@@ -160,7 +178,7 @@ spec:
     spec:
       containers:
       - name: reviews
-        image: istio/examples-bookinfo-reviews-v3:1.8.0
+        image: istio/examples-bookinfo-reviews-v3:1.10.1
         imagePullPolicy: IfNotPresent
         ports:
         - containerPort: 9080
@@ -174,6 +192,7 @@ metadata:
   name: productpage
   labels:
     app: productpage
+    service: productpage
 spec:
   ports:
   - port: 9080
@@ -185,6 +204,9 @@ apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
   name: productpage-v1
+  labels:
+    app: productpage
+    version: v1
 spec:
   replicas: 1
   template:
@@ -197,7 +219,7 @@ spec:
     spec:
       containers:
       - name: productpage
-        image: istio/examples-bookinfo-productpage-v1:1.8.0
+        image: istio/examples-bookinfo-productpage-v1:1.10.1
         imagePullPolicy: IfNotPresent
         ports:
         - containerPort: 9080
